crates/panache-parser/tests/snapshots/yaml__yaml_suite_8KB6.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 707
expression: snapshot
---
case_id: 8KB6
input: "---\n- { single line, a: b}\n- { multi\n  line, a: b}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
