crates/panache-parser/tests/snapshots/yaml__yaml_suite_8MK2.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 648
expression: snapshot
---
case_id: 8MK2
input: "! a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
