crates/panache-parser/tests/snapshots/yaml__yaml_suite_8QBE.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 8QBE
input: "key:\n - item1\n - item2\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
