crates/panache-parser/tests/snapshots/yaml__yaml_suite_8UDB.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 8UDB
input: "[\n\"double\n quoted\", 'single\n           quoted',\nplain\n text, [ nested ],\nsingle: pair,\n]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
