crates/panache-parser/tests/snapshots/yaml__yaml_suite_8XDJ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 8XDJ
input: "key: word1\n#  xxx\n  word2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_INDENT:unexpected indent token while parsing block map@18..18]
