crates/panache-parser/tests/snapshots/yaml__yaml_suite_8XYN.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 896
expression: snapshot
---
case_id: 8XYN
input: "---\n- &😁 unicode anchor\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
