crates/panache-parser/tests/snapshots/yaml__yaml_suite_93JH.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 93JH
input: " - key: value\n   key2: value2\n -\n   key3: value3\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
