crates/panache-parser/tests/snapshots/yaml__yaml_suite_93WF.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 93WF
input: "--- >-\n  trimmed\n  \n \n\n  as\n  space\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
