crates/panache-parser/tests/snapshots/yaml__yaml_suite_96L6.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 96L6
input: "--- >\n  Mark McGwire's\n  year was crippled\n  by a knee injury.\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
