crates/panache-parser/tests/snapshots/yaml__yaml_suite_98YD.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 922
expression: snapshot
---
case_id: 98YD
input: "# Comment only.\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
