crates/panache-parser/tests/snapshots/yaml__yaml_suite_9BXH.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 9BXH
input: "---\n- { \"single line\", a: b}\n- { \"multi\n  line\", a: b}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
